fix z-index display error (sidebar), fix components/Toc prop types

--- a/components/Layout/Sidebar/SidebarToggle/style.sass
+++ b/components/Layout/Sidebar/SidebarToggle/style.sass
@@ -4,7 +4,7 @@
   +translucent
   position: fixed
   left: -1px
-  z-index: 102
+  z-index: 101
   background-color: white !important
 
   button
